исправлены замечания первой итерации проекта